Fixed Broken CSS on the HTML page

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -104,9 +104,9 @@ a[href] {
 }
 
 .detail-image-title {
-    /*position: absolute;
+    position: absolute;
     bottom: -16px;
-    left: 4px;*/
+    left: 4px;
     color: white;
     font-family: airstreamregular;
     text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
